added landamarks section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </header>
 
       <!-- Stats and Controls Container -->
-      <div class="dashboard">
+      <section class="dashboard" aria-label="Stats and Controls">
         <section class="stats-bar">
           <div class="stat-item">
             <span class="stat-label">WPM:</span>
